#pragma once

class Alas
{
private:
    /* data */
public:
    Alas(/* args */) {}
    ~Alas() {}
};