#pragma once

class Bigote
{
private:
    /* data */
public:
    Bigote(/* args */) {}
    ~Bigote() {}
};