#pragma once

class Bloque
{
private:
    /* data */
public:
    Bloque(/* args */) {}
    ~Bloque() {}
};