#pragma once

class Botas
{
private:
    /* data */
public:
    Botas(/* args */) {}
    ~Botas() {}
};