#pragma once

class Bowser
{
private:
    /* data */
public:
    Bowser(/* args */) {}
    ~Bowser() {}
};