#pragma once

class Caparazon
{
private:
    /* data */
public:
    Caparazon(/* args */) {}
    ~Caparazon() {}
};