#pragma once

class Champiñon
{
private:
    /* data */
public:
    Champiñon(/* args */) {}
    ~Champiñon() {}
};