#pragma once

class ContadorDeMonedas
{
private:
    /* data */
public:
    ContadorDeMonedas(/* args */) {}
    ~ContadorDeMonedas() {}
};