#pragma once 

class ContadorDeMundos
{
private:
    /* data */
public:
    ContadorDeMundos(/* args */) {}
    ~ContadorDeMundos() {}
};