#pragma once

class ContadorDeTiempo
{
private:
    /* data */
public:
    ContadorDeTiempo(/* args */) {}
    ~ContadorDeTiempo() {}
};