#pragma once

class ContadorDeVida
{
private:
    /* data */
public:
    ContadorDeVida(/* args */) {}
    ~ContadorDeVida() {}
};