#pragma once

class Estrella
{
private:
    /* data */
public:
    Estrella(/* args */) {}
    ~Estrella() {}
};