#pragma once

class Flor
{
private:
    /* data */
public:
    Flor(/* args */) {}
    ~Flor() {}
};