#pragma once 

class Goomba
{
private:
    /* data */
public:
    Goomba(/* args */) {}
    ~Goomba() {}
};