#pragma once

class Gorra
{
private:
    /* data */
public:
    Gorra(/* args */) {}
    ~Gorra() {}
};