#pragma once

class Koopa
{
private:
    /* data */
public:
    Koopa(/* args */) {}
    ~Koopa() {}
};