#pragma once

class Luigi
{
private:
    /* data */
public:
    Luigi(/* args */) {}
    ~Luigi() {}
};