#pragma once

class Mapa
{
private:
    /* data */
public:
    Mapa(/* args */) {}
    ~Mapa() {}
};