#pragma once 

class Mario
{
private:
    /* data */
public:
    Mario(/* args */) {}
    ~Mario() {}
};