#pragma once

class Npc
{
private:
    /* data */
public:
    Npc(/* args */) {}
    ~Npc() {}
};