#pragma once

class Overol
{
private:
    /* data */
public:
    Overol(/* args */) {}
    ~Overol() {}
};