#pragma once

class Peach
{
private:
    /* data */
public:
    Peach(/* args */) {}
    ~Peach() {}
};