#pragma once

class PlantaPiraña
{
private:
    /* data */
public:
    PlantaPiraña(/* args */) {}
    ~PlantaPiraña() {}
};