#pragma once

class SuperMarioBros
{
private:
    /* data */
public:
    SuperMarioBros(/* args */) {}
    ~SuperMarioBros() {}
};