#pragma once

class Toad
{
private:
    /* data */
public:
    Toad(/* args */) {}
    ~Toad() {}
};