#pragma once

class Traje
{
private:
    /* data */
public:
    Traje(/* args */) {}
    ~Traje() {}
};