#pragma once

class Tuberia
{
private:
    /* data */
public:
    Tuberia(/* args */) {}
    ~Tuberia() {}
};