#pragma once

class Videojuego
{
private:
    /* data */
public:
    Videojuego(/* args */) {}
    ~Videojuego() {}
};